--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.11"
 Django = "^4.2.3"
 djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.6"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
