--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ Django = "^4.2.3"
 djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.6"
 python-dotenv = "^1.0.0"
+celery = "^5.3.1"
+redis = "^4.6.0"
+flower = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 
