--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-dotenv = "^1.0.0"
 celery = "^5.3.1"
 redis = "^4.6.0"
 flower = "^2.0.0"
+ptvsd = "^4.3.2"
+pydevd-pycharm = "~=231.9225.15"
 
 [tool.poetry.dev-dependencies]
 
